kuard-config.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kuard-config
spec:
  containers:
  - name: test-container
    image:  gcr.io/kuar-demo/kuard-amd64:1
    volumeMounts:
    - name: config-volume
      mountPath: /config
  volumes:
  - name: config-volume
    configMap:
      name: my-env
