kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kuard
    run: kuard
  name: kuard
spec:
  imagePullSecrets:
  - name: mydockerhubsecret
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      periodSeconds: 2
      initialDelaySeconds: 5
      failureThreshold: 3
      successThreshold: 1
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
